tests/sksl/errors/UnknownDivideByZero.dsl.glsl
### Compilation failed:

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

error: division by zero

16 errors
